fix: update sidebar accent color for improved visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,7 +78,8 @@
   --sidebar-primary-foreground: oklch(0.985 0 0);
 
   /* Sidebar Active Item Background Color */
-  --sidebar-accent: oklch(0.964 0.233 100.56);
+  --sidebar-accent: oklch(0.94 0.18 100.56);
+  
 
   /* Sidebar Active Item Text Color */
   --sidebar-accent-foreground: oklch(0.205 0 0);
